openapi: asciidoc output #3820 (#3821)
* v4.0.11

* prepare for next development cycle

* WIP: openapi: asciidoc output #3820

- setup pebble as template engine/ascii doc pre-processor
- start of `snippets` which are going to output/print routes in multiple formats

* prepare for next development cycle

* filter: curl

- more advanced implementation
- unit tests
- ref #3820

* openapi: asciidoc output

- curl support form parameter
- curl support query parameter
- added schema, json, yaml filters

- ref #3820

* openapi: asciidoc output #3820

- add more snippets
- code clean up

* openapi: asciidoc output #3820

- attempt to control new lines

* windows: attempt to find blank difference

* - integrate ascii doc into openapi generator: maven/gradle plugin
- fix schema data iteration to support schema $ref
- make schema filter pretty print output

* - better implementation for summary/description doc
- Add GET adoc function shortcut for operation

* - add POST, PUT,.., adoc operations
- ref #3820

* - add `path` filter with replace query and path paramters
- better format for table output (long description column)
- ref #3820

* - enum doc: add field doc with custom implementation
- add schema function to located schemas and/or schema properties
- add `display` filter

* pebble/ascii doc support: redo pebble function and filter

all them follow the given patter: `{{find/locate | mutator/filter | display}}`
it creates a clear and common pattern for final users

* - implementation complete
- redo entire pebble/template support
- it is lot better now <3

* - cleanup, remove all implementation
- cleanup classpath

- ref #3820

* - remove dead template files
- ref #3820

* - fix build #3820

* - build: fix new line on windows

* set default error response:
- allow to define custom error
- add a function error
- allow to resolve simple variables from error template
- ref #3820

* statusCode: add way to display status code

- it can be override, supported format: json, yaml